Issue #120: Logging with time,uptimemillis.